reverting most of math4.css to how it was throughout 2.8. Now the only changes should be: hihglighting of feedback messages using the same color that ShowMeAnother uses; coloring of table cells with incorrect and correct answer messages; and vertical centering alignment for the results table

--- a/htdocs/themes/math4/math4.css
+++ b/htdocs/themes/math4/math4.css
@@ -375,24 +375,24 @@ div.AuthorComment { background-color: #00E0E0; color: black; }
 /*ul.LinksMenu ul { list-style: none; margin-left: 0.5em; padding-left: 0; }*/
 
 /* background styles for success and failure messages */
-div.WarningMessage { background-color: #FFFFCC; color: #F60; border 2px solid #F60; padding: 3px 3px 3px 3px; } /* #F60 darker orange; #FFFFCC lighter orange*/
-div.ResultsWithoutError { color: inherit; background-color: #8F8; } /* green bar */
-div.ResultsAlert { background-color: #EDE275; color: black; border: 2px solid #F60; padding: 4px 4px 4px 4px; } /* #F60 darker orange; #FFFFCC lighter orange*/
+div.WarningMessage { background-color: #FF9494; padding: 3px 3px 3px 3px; } /* error red, from http://www.colourlovers.com/color/FF9494/error_red*/
+div.ResultsWithoutError { color: inherit; background-color: #8F8; } /* green */
 div.ResultsWithError { color: #FF9494; background-color: inherit; } /* error red, from http://www.colourlovers.com/color/FF9494/error_red*/
+div.ResultsAlert { color: #F60; background-color: inherit; } /* orange */
 div.showMeAnotherBox { background-color: #EDE275; border-radius: 5px; border: 2px solid #FDD017; padding: 3px 3px 3px 3px} /* bright gold border and harvest gold background*/
-label.WarningMessage { background-color: #FFFFCC; color: #F60; border 2px solid #F60; padding: 3px 3px 3px 3px; } /* #F60 darker orange; #FFFFCC lighter orange*/
-label.ResultsWithoutError { color: inherit; background-color: #8F8; } /* green bar */
+label.WarningMessage { background-color: #FF9494; padding: 3px 3px 3px 3px; } /* error red, from http://www.colourlovers.com/color/FF9494/error_red*/
+label.ResultsWithoutError { color: inherit; background-color: #8F8; } /* green */
 label.ResultsWithError { color: #FF9494; background-color: inherit; } /* error red, from http://www.colourlovers.com/color/FF9494/error_red*/
-label.ResultsAlert { background-color: #FFFFCC; color: #F60; border: 2px solid #F60; padding: 4px 4px 4px 4px; } /* #F60 darker orange; #FFFFCC lighter orange*/
-span.WarningMessage { background-color: #FFFFCC; color: #F60; border 2px solid #F60; padding: 3px 3px 3px 3px; } /* #F60 darker orange; #FFFFCC lighter orange*/
-span.ResultsWithoutError { color: inherit; background-color: #8F8; } /* green bar */
+label.ResultsAlert { color: #F60; background-color: inherit; } /* orange */
+span.WarningMessage { background-color: #FF9494; padding: 3px 3px 3px 3px; } /* error red, from http://www.colourlovers.com/color/FF9494/error_red*/
+span.ResultsWithoutError { color: inherit; background-color: #8F8; } /* green */
 span.ResultsWithError { color: #FF9494; background-color: inherit; } /* error red, from http://www.colourlovers.com/color/FF9494/error_red*/
-span.ResultsAlert { background-color: #FFFFCC; color: #F60; border: 2px solid #F60; padding: 4px 4px 4px 4px; } /* #F60 darker orange; #FFFFCC lighter orange*/
+span.ResultsAlert { color: #F60; background-color: inherit; } /* orange */
 span.correct { color: inherit; background-color: #8F8; } /* green */
-span.incorrect { color: #FF9494; background-color: inherit; } /* error red */
+span.incorrect { color: #FF9494; background-color: inherit; } /* red */
 span.unattempted { color: inherit; background-color: #88ECFF;}
-input.correct   { color:inherit; background-color: #8F8; } /* green */
-input.incorrect { color:inherit; background-color: #FF9494; } /* error red */
+input.correct { color:inherit; background-color: #8F8; } /* green */
+input.incorrect { color:inherit; background-color: #FF9494; } /* red */
 
 .results-popover {
     cursor : pointer;
